# Restricted HF reference, singlet states
add_subdirectory(h2o_adc1)
add_subdirectory(h2o_adc2)
add_subdirectory(h2o_adc2x)
add_subdirectory(h2o_adc3)
add_subdirectory(h2o_cvs_adc1)
add_subdirectory(h2o_cvs_adc2)
add_subdirectory(h2o_cvs_adc2x)
add_subdirectory(h2o_cvs_adc3)
add_subdirectory(h2o_fc_adc2)
add_subdirectory(h2o_fv_adc2x)

# Restricted HF reference, other spin
add_subdirectory(h2o_cvs_adc2x_triplets)
add_subdirectory(h2o_adc2_any)

# Unrestricted HF reference
# add_subdirectory(hf_adc2_spin_flip)
# add_subdirectory(cn_adc2)
