add_subdirectory(linear-dependence)
add_subdirectory(high-angular-momentum)

add_subdirectory(single-point-hf)
add_subdirectory(single-point-hf-rohf)
add_subdirectory(single-point-hf-uhf)
add_subdirectory(single-point-dft)
add_subdirectory(single-point-dft-uhf)
add_subdirectory(single-point-dft-lrc)
add_subdirectory(single-point-dft-nlc)

add_subdirectory(geometry-optimization-hf)
add_subdirectory(geometry-optimization-hf-rohf)
add_subdirectory(geometry-optimization-hf-uhf)
add_subdirectory(geometry-optimization-dft)
add_subdirectory(geometry-optimization-dft-lrc)

add_subdirectory(frequency-hf)
add_subdirectory(frequency-hf-uhf)

add_subdirectory(pentacene)
