add_subdirectory(sp-uhf-mp2)
add_subdirectory(sp-rohf-scf)
add_subdirectory(sp-rhf-ccsd_t_-ecc)
add_subdirectory(opt-rhf-scf)
add_subdirectory(psi-rhf-scsmp2)
add_subdirectory(pywrap-cbs1)
add_subdirectory(puream)            
add_subdirectory(mints5)
add_subdirectory(mints5-grad)
add_subdirectory(kw-1)
add_subdirectory(kw-2)
add_subdirectory(kw-3)
add_subdirectory(kw-4)
add_subdirectory(kw-5)
add_subdirectory(kw-6)
add_subdirectory(kw-7)
add_subdirectory(kw-8)
add_subdirectory(psi-ghost-grad)
add_subdirectory(scf4)
add_subdirectory(mp2-1)
add_subdirectory(pywrap-db1)
add_subdirectory(pywrap-basis)
add_subdirectory(dfmp2-1)
add_subdirectory(sp-rhf-scf)
add_subdirectory(sp-rhf-mp2)
add_subdirectory(sp-rhf-ccsd)
add_subdirectory(sp-rhf-ccsd-ao)
add_subdirectory(sp-rhf-ccsd_t_)
add_subdirectory(sp-rhf-ccsd_t_-ao)
add_subdirectory(sp-rhf-ccsd_t_-ao-ecc) 
add_subdirectory(sp-rhf-ccsd_t_-fc)
add_subdirectory(sp-rhf-cc3)
add_subdirectory(sp-rhf-ccsdt) 
add_subdirectory(sp-uhf-scf)
add_subdirectory(sp-uhf-ccsd)
add_subdirectory(sp-uhf-ccsd_t_)
add_subdirectory(sp-uhf-ccsd_t_-ao)
add_subdirectory(sp-uhf-ccsd_t_-ao-ecc)
add_subdirectory(sp-uhf-ccsd_t_-ecc)
add_subdirectory(sp-uhf-cc3)
add_subdirectory(sp-uhf-ccsdt)
add_subdirectory(sp-rohf-mp2-sc)
add_subdirectory(sp-rohf-mp4-sc)
add_subdirectory(sp-rohf-ccsd)
add_subdirectory(sp-rohf-ccsd_t_)
add_subdirectory(sp-rohf-ccsdt)
add_subdirectory(sp-rohf-ccsd-ao)
add_subdirectory(sp-rohf-ccsd_t_-ao)
add_subdirectory(sp-rohf-ccsd_t_-ao-ecc)
add_subdirectory(sp-rohf-ccsd_t_-fc)
add_subdirectory(opt-rhf-mp2)
add_subdirectory(opt-rhf-ccsd_t_)
add_subdirectory(opt-rhf-ccsd_t_-ecc)
add_subdirectory(psi-a24-grad)
add_subdirectory(psi-uhf-scsmp2)
add_subdirectory(psi-rohf-scsmp2)
add_subdirectory(psi-rhf-mp3)
add_subdirectory(psi-uhf-mp3)
add_subdirectory(psi-mp4)
