add_subdirectory(schema-1-energy)
add_subdirectory(schema-2-energy)
add_subdirectory(schema-1-ghost)
add_subdirectory(schema-2-ghost)
add_subdirectory(schema-1-orient)
add_subdirectory(schema-2-orient)
add_subdirectory(schema-1-throws)
add_subdirectory(schema-2-throws)
add_subdirectory(schema-1-gradient)
add_subdirectory(schema-2-gradient)
add_subdirectory(schema-1-properties)
add_subdirectory(schema-2-properties)
add_subdirectory(schema-1-response)
add_subdirectory(schema-2-response)
add_subdirectory(schema-1-tamps)
add_subdirectory(schema-2-tamps)
