add_subdirectory(dft)
add_subdirectory(dipole)
add_subdirectory(scf)
add_subdirectory(opt-fd)
add_subdirectory(ccsd-pte)
if (ENABLE_qcmanybody)
    add_subdirectory(ghost)
    message(STATUS "Adding test cases: Psi4 + PCMSolver + qcmanybody")
endif()
add_subdirectory(alpha)
add_subdirectory(tdscf)
add_subdirectory(uhf-tdscf)
