add_subdirectory(skeleton)
add_subdirectory(skeletonaointegrals)
add_subdirectory(skeletondfmp2)
add_subdirectory(skeletonmointegrals)
add_subdirectory(skeletonscf)
add_subdirectory(skeletonsointegrals)
add_subdirectory(skeletonwavefunction)
#if (ENABLE_AMBIT)
#    add_subdirectory(skeletonambit)
#endif()
