add_subdirectory(energy)
add_subdirectory(curve)
add_subdirectory(pubchem)
add_subdirectory(mints9)
add_subdirectory(mints2)
add_subdirectory(cc54)
add_subdirectory(3-index-transforms)
add_subdirectory(mints13)
add_subdirectory(mints14)
add_subdirectory(cc-amps)
add_subdirectory(databases)
add_subdirectory(nopotential)
add_subdirectory(external-hamiltonian)
