project(GTFock)
set(CMAKE_C_FLAGS "-O3 -Wall -openmp -w2 -fPIC -Wunknown-pragmas")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunused-variable ${JK_BLAS_INC}") 
add_subdirectory(libcint)
add_subdirectory(libpfock)
add_subdirectory(external/oed)
if(JK_ERD MATCHES "NONE")
   add_subdirectory(external/erd)
endif()